--- a/rf/rf-boot/pom.xml
+++ b/rf/rf-boot/pom.xml
@@ -17,7 +17,6 @@
   </properties>
 
   <name>rf-boot</name>
-  <url>https://github.com/FK7075/lucky</url>
 
   <dependencies>
 
@@ -29,7 +28,7 @@
 
     <dependency>
       <groupId>com.czx</groupId>
-      <artifactId>stxd-framework</artifactId>
+      <artifactId>rf-framework</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
